@@ -2,6 +2,7 @@
 
 	* src/CMakeLists.txt: Added new files to build, removed old files and
 	added SDL_tff to the required libraries.
+	* src/gui/truetypefont.h: Remove duplicated contents.
 
 2007-09-20  Guillaume Melquiond  <guillaume.melquiond@gmail.com>
 
